syntax = "proto3";

package com.tales.terra.rpc.v1.get_user.v1;

import "com/tales/terra/shared/v1/user/v1/user.proto";

option java_multiple_files = true;

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  shared.v1.user.v1.User user = 1;
}
